# grantme

./: README.md
contracts/dao/: Cargo.toml  dao_contract.rs  errors.rs  lib.rs  types.rs
contracts/dao_factory/: Cargo.toml  lib.rs
contracts/oracle/: Cargo.toml  lib.rs
contracts/oracle-getter/: Cargo.toml  lib.rs
contracts/oracle-setter/: Cargo.toml  lib.rs
frontend/: .env.example  README.md  package.json
frontend/src/components/: LayoutProvider.tsx
frontend/src/components/common/: AddressButton.tsx  CardListSkeleton.tsx  DAOSkeleton.tsx  TxNotifications.tsx  WalletBar.tsx
frontend/src/components/dao/: DAOCreationProgress.tsx  DAOList.tsx  Item.tsx  RecentDAOList.tsx
frontend/src/components/dao/detail/: DaoMembers.tsx  DaoStatistic.tsx  DaoSteps.tsx  DaoTabs.tsx  DetailItem.tsx  WhitelistedContributors.tsx
frontend/src/components/dao/form/: General.tsx  Kyc.tsx  (+6 more)
frontend/src/components/program/: ProgramList.tsx
frontend/src/components/proposal/: ProposalVoting.tsx  QuorumSlider.tsx  ThresholdSlider.tsx
frontend/src/contracts/: dao.json  dao_factory.json
frontend/src/controller/: store.ts
frontend/src/controller/dao/: daoDetailSlice.ts  daoFormSlice.ts  daoSlice.ts
frontend/src/controller/process/: processSlice.ts
frontend/src/core/: config.ts  dao.ts  dao_factory.ts  do_transaction.ts
frontend/src/helpers/: data_converter.ts  data_validation.ts  message_consts.ts
frontend/src/hooks/: useMessage.ts
frontend/src/pages/: _app.tsx  _document.tsx  index.tsx
frontend/src/pages/dao/: list.tsx  new.tsx
frontend/src/utils/: noti.ts
(+6 files in other folders)
