[package]
name = "dao"
version = "0.1.0"
authors = ["levia2n <levi@a2n.finance>", "johna2n <john@a2n.finance>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
dia-oracle-getter = { path = "../oracle-getter", default-features = false }

[dev-dependencies]
ink_e2e = "4.2.0"
dia-oracle = { path = "../oracle", default-features = false }
dia-oracle-setter = { path = "../oracle-setter", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
     "dia-oracle-getter/std"
]
ink-as-dependency = []
e2e-tests = []
